--- a/package.json
+++ b/package.json
@@ -20,15 +20,28 @@
     "@neondatabase/serverless": "^0.10.4",
     "@node-rs/argon2": "^2.0.2",
     "@node-rs/bcrypt": "^1.10.7",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.0",
     "drizzle-zod": "^0.7.0",
     "lucia": "^3.2.2",
+    "lucide-react": "^0.474.0",
     "nanoid": "^5.0.9",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "oslo": "^1.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
